--- a/package.xml
+++ b/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>py_pubsub</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>Examples of minimal publisher/subscriber using rclpy</description>
   <maintainer email="mechatronics0801@gmail.com">devlim</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
@@ -15,4 +15,6 @@
   <export>
     <build_type>ament_python</build_type>
   </export>
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 </package>
